proj, part 5 + bonus midi player (iPod) - progress point A

--- a/Project/ph431-electrodynamic-sim-dan-jang.ipynb
+++ b/Project/ph431-electrodynamic-sim-dan-jang.ipynb
@@ -607,11 +607,14 @@
     "        # Initialize tabs for our three simulation sections,\n",
     "        # ...Part 2: Electric Field Simulation, Part 3: Electric Potential @ Midpoint, Part 4: Oscillating Point Charge.\n",
     "        simulation_tabs = ttk.Notebook(self)\n",
-    "        #initialize_part1()\n",
+    "        #self.initialize_part1()\n",
     "        self.create_part2_tab(simulation_tabs)\n",
     "        self.create_part3_tab(simulation_tabs)\n",
     "        self.create_part4_tab(simulation_tabs)\n",
+    "        # Bonus: Fun MIDI music-player\n",
+    "        self.plug_in_ipod(simulation_tabs)\n",
     "        \n",
+    "        # Pack all three simulation-section tabs into our main GUI window!\n",
     "        simulation_tabs.pack(expand=1, fill=\"both\")\n",
     "    \n",
     "    # def initialize_part1():\n",
@@ -620,18 +623,64 @@
     "    def create_part2_tab(self, simulation_tabs):\n",
     "        part2_tab = ttk.Frame(simulation_tabs)\n",
     "        simulation_tabs.add(part2_tab, text=\"Part 2: Electric Field Simulation Minigame\")\n",
+    "        \n",
+    "        part2 = Part2(part2_tab)\n",
+    "        part2.pack(fill=\"both\", expand=True)\n",
     "    \n",
     "    # Initializing the tab for Part 3: Electric Potential @ Midpoint\n",
     "    def create_part3_tab(self, simulation_tabs):\n",
     "        part3_tab = ttk.Frame(simulation_tabs)\n",
     "        simulation_tabs.add(part3_tab, text=\"Part 3: Electric Potential @ Midpoint Calculation & Graphical Visualization\")\n",
+    "        \n",
+    "        part3 = Part3(part3_tab)\n",
+    "        part3.pack(fill=\"both\", expand=True)\n",
     "    \n",
     "    # Initializing the tab for Part 4: Oscillating Point Charge\n",
     "    def create_part4_tab(self, simulation_tabs):\n",
     "        part4_tab = ttk.Frame(simulation_tabs)\n",
     "        simulation_tabs.add(part4_tab, text=\"Part 4: Oscillating Point Charge Simulation\")\n",
     "        \n",
+    "        part4 = Part4(part4_tab)\n",
+    "        part4.pack(fill=\"both\", expand=True)\n",
+    "    \n",
+    "    # Initializing the bonus iPod music player (MIDI player using PyGame)\n",
+    "    def plug_in_ipod(self, simulation_tabs):\n",
+    "        ipod_tab = ttk.Frame(simulation_tabs)\n",
+    "        simulation_tabs.add(ipod_tab, text=\"iPod - 🎵 Now Playing: Africa by Toto... 🎷\")\n",
     "        \n",
+    "        ipodplayer = iPod(ipod_tab)\n",
+    "        ipodplayer.pack(fill=\"both\", expand=True)\n",
+    "\n",
+    "### Extra: Fun MIDI music-player\n",
+    "class iPod(tk.Frame):\n",
+    "    def __init__(self, tabs):\n",
+    "        super().__init__(tabs)\n",
+    "        self.turn_on_ipod()\n",
+    "        \n",
+    "        self.play_button_tab = tk.Frame(self.notebook)\n",
+    "        self.stop_button_tab = tk.Frame(self.notebook)\n",
+    "        \n",
+    "        play_button = tk.Button(self.play_button_tab, text=\"▶️\", command=self.tunes)\n",
+    "        stop_button = tk.Button(self.stop_button_tab, text=\"⏹\", command=self.stop_tunes)\n",
+    "    \n",
+    "    def turn_on_ipod(self):\n",
+    "        pgame.init()\n",
+    "        pgame.mixer.init()\n",
+    "        \n",
+    "        self.musicfile = \"toto-africa.mid\" # Credits to BitMidi for the MIDI file, https://bitmidi.com/toto-africa-mid\n",
+    "        self.channel = pgame.mixer.Channel(0)\n",
+    "        self.itunes = pgame.mixer.music.load(self.musicfile)\n",
+    "    \n",
+    "    def tunes(self):\n",
+    "        #self.channel.play(self.itunes)\n",
+    "        if not self.channel.get_busy():\n",
+    "            #pgame.mixer.music.play()\n",
+    "            self.channel.play(self.itunes, loops=-1)\n",
+    "    \n",
+    "    def stop_tunes(self):\n",
+    "        #pgame.mixer.music.stop()\n",
+    "        self.channel.stop()\n",
+    "        #pgame.quit()\n",
     "\n",
     "#class Part1:\n",
     "    \n",
@@ -642,10 +691,13 @@
     "\n",
     "### Encapsulation of Part 2: Electric Field Simulation as a Class\n",
     "### Heavily modified to migrate from PyGame implementation to a tkinter-compatible version\n",
-    "class Part2:\n",
+    "class Part2(tk.Frame):\n",
     "    ##### PH 431: Exploration of Electrodynamic Simulations Project by Dan J.\n",
     "    #### Part 2 - Electric Field Simulation Demonstration\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, parent):\n",
+    "        super().__init__(parent)\n",
+    "        \n",
+    "        \n",
     "        ## Initialize PyGame\n",
     "        pgame.init()\n",
     "\n",
@@ -968,8 +1020,8 @@
     "        create_animation_button.on_click(button_has_been_clicked)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    app = CoolGUI()\n",
-    "    app.mainloop()"
+    "    ph431_electrodynamic_sim_project = CoolGUI()\n",
+    "    ph431_electrodynamic_sim_project.mainloop()"
    ]
   },
   {
