extra - nbconvert ipynb -> readable PDF conversion

--- a/Project/ph431-electrodynamic-sim-dan-jang.ipynb
+++ b/Project/ph431-electrodynamic-sim-dan-jang.ipynb
@@ -1400,6 +1400,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Fig3e-FullGUIMainPage.png](Fig3e-FullGUIMainPage.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## References\n",
     "\n",
     "1.\tGriffiths DJ. Introduction to electrodynamics. 4 ed. Cambridge: Cambridge university press; 2017.\n",
